      LoadedTrove and BuildReq entries for components.  These entries
      are only valid on packages.  Code was added to catch when this
      happens to aid debugging.  Additionally, Conary will
      automatically remove the invalid entries the first time 0.80.1
      is run.
    * Environment variables are expanded in paths in conary configuration files.
  o Building Changes:
    * Java dependency generation is now enabled; Java dependency enforcement
      is still disabled.
    * The skipMissingSubDir keyword argument now actually works correctly
      when the subdirectory is missing.
  o Common Changes:
    * Entitlement support has been added as an alternate method of 
      authentication.

Changes in 0.80.0:
  o Client Changes:
    * The logic for defining updates across a hierarchy has been completely
      replaced. Instead of rigidly following the trove digraph, we flatten
      the update to choose how troves get updated, and walk the hierarchy
      to determine which updates to actually apply.
    * Dependency resolution could include troves which caused duplicate 
      removals for the troves those included troves replace
    * Chroot handling was broken in 0.71.2 and prevented the user name
      lookup code for the chroot from exiting back out of the chroot
    * showchangeset on relative changesets now displays them as jobs.
    * query and queryrep now exclude components if they match their 
      package name
    * Conary cleans up rollbacks when a changeset fails to apply.
      Previously, an invalid changeset was saved in the rollback
      stack, which made applying it impossible
    * Removed direct instantiation of NetworkRepositoryClient object; it
      should be created by calling ConaryClient
    * repositoryMap should not contain usernames and passwords now; user
      config file option should hold those instead (user *.rpath.org user pass)
    * If a user name is given without a password the password will be prompted