@@ -11,6 +11,7 @@ Changes in 0.80.1:
       automatically remove the invalid entries the first time 0.80.1
       is run.
     * Environment variables are expanded in paths in conary configuration files.
+    * localcs now allows the version and flavor to be specified for a trove
   o Building Changes:
     * Java dependency generation is now enabled; Java dependency enforcement
       is still disabled.
